Fixup flicker on pie chart render

--- a/css/theme.css
+++ b/css/theme.css
@@ -64,6 +64,11 @@ body {
     -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
     transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
+#pieChart
+{
+    height: 526px;
+}
+
 #gitGraph, .graphHolder
 {
     height: 900px;
